objects/PC_SupportPlanRuntime__c.object
<CustomObject>
    <description>Patient Connect custom object to capture run time instance of a Support Plan</description>
    <fields>
        <fullName>PC_Completed_Activity_Date__c</fullName>
        <description>The date on which the previous activity was completed</description>
        <label>Completed Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Completed_Activity__c</fullName>
        <description>The id of the previously completed Activity</description>
        <label>Completed Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_CurrentActivityStatus__c</fullName>
        <description>Status of the current activity. Determines if the activity is in progress or a pending state.</description>
        <label>Current Activity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Condition</fullName>
                    <default>true</default>
                    <label>Pending Condition</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_CurrentActivity__c</fullName>
        <description>Name of the current activity being evaluated for the Support Plan.</description>
        <label>Current Activity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_CurrentGroupAllActivities__c</fullName>
        <description>List of all the activities in the current group</description>
        <label>Current Group All Activities</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Current_Group_Next_Activity__c</fullName>
        <description>Holds the next activity of the current group</description>
        <label>Current Group Next Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Current_Group_Status__c</fullName>
        <description>Status of the current group. Determines if the group is in progress or a pending state.</description>
        <label>Current Group Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Condition</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Current_Group__c</fullName>
        <description>Internal Activity of  Group if Group is being executed</description>
        <label>Current Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_EndTime__c</fullName>
        <description>End date or time when the Support Plan execution was completed.</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_RecordId__c</fullName>
        <description>Id of the Record on which Support Plan is being processed</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_StartTime__c</fullName>
        <description>Start date or time when the Support Plan was initiated.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_SupportPlanCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case for which the Support Plan has been executed.</description>
        <label>Support Plan Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Support Plan Runtime</relationshipLabel>
        <relationshipName>Support_Plan_Runtime</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_SupportPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support Plan to which the run time instance belongs.</description>
        <label>Support Plan</label>
        <referenceTo>PC_SupportPlan__c</referenceTo>
        <relationshipLabel>Support Plan Runtime</relationshipLabel>
        <relationshipName>Support_Plan_Runtime</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Support Plan Runtime</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PC_SupportPlan__c</columns>
        <columns>PC_SupportPlanCase__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Support Plan Runtime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Plan Runtime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>